// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`keeps objects as is 1`] = `
"const fill1 = (top = 0, left = 0, right = 0, bottom = 0) => ({
  position: 'absolute',
  top,
  right,
  bottom,
  left,
});

const fill2 = (top = 0, left = 0, right = 0, bottom = 0) => {
  return {
    position: 'absolute',
    top,
    right,
    bottom,
    left,
  };
};

exports.__linariaPreval = [fill1, fill2];"
`;

exports[`keeps only code which is related to \`a\` 1`] = `
"const { whiteColor: color, anotherColor } = require('…');
const a = color || anotherColor;
color.green = '#0f0';
exports.__linariaPreval = [a];"
`;

exports[`keeps only code which is related to \`anotherColor\` 1`] = `
"const { whiteColor: color, anotherColor } = require('…');
color.green = '#0f0';
exports.__linariaPreval = [anotherColor];"
`;

exports[`keeps only code which is related to \`color\` 1`] = `
"const { whiteColor: color, anotherColor } = require('…');
color.green = '#0f0';
exports.__linariaPreval = [color];"
`;

exports[`keeps reused exports 1`] = `
"const bar = function() {
  return 'hello world';
};
exports.bar = bar;

const foo = exports.bar();
exports.__linariaPreval = [foo];"
`;

exports[`removes all 1`] = `
"
exports.__linariaPreval = [];"
`;

exports[`shakes assignment patterns 1`] = `
"const [identifier = 1] = [2];
const [{...object} = {}] = [{ a: 1, b: 2 }];
const [[...array] = []] = [[1,2,3,4]];
const obj = { member: null };
exports.__linariaPreval = [identifier, object, array, obj];"
`;

exports[`shakes es5 exports 1`] = `
""use strict";
Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.redColor = 'red';
exports['yellowColor'] = 'yellow';
Object.defineProperty(exports, "greenColor", {
  enumerable: true,
  get: function get() {
    return 'green';
  }
});"
`;

exports[`shakes exports 1`] = `
"export const a = color;
exports.__linariaPreval = [a];"
`;

exports[`shakes for-in statements 1`] = `
"const obj1 = { a: 1, b: 2 };
const obj2 = {};
for (const key in obj1) {
  obj2[key] = obj1[key];
}
exports.__linariaPreval = [obj2];"
`;

exports[`shakes imports 1`] = `"exports.__linariaPreval = [color, defaultColor];"`;

exports[`shakes sequence expression 1`] = `
"const color1 = (() => 'blue');
let local = '';
const color2 = (local = color1(), () => local);
exports.__linariaPreval = [color2];"
`;

exports[`should keep member expression key 1`] = `
"const key = 'blue';
const obj = { blue: '#00F' };
const blue = obj[key];
exports.__linariaPreval = [blue];"
`;
